Teste de alteração de arquivo

--- a/web/cadastroFuncionario.xhtml
+++ b/web/cadastroFuncionario.xhtml
@@ -11,6 +11,7 @@
         
         <ui:define name="corpo-da-pagina">
             <h1>Cadastro de Funcionário</h1>
+            Teste de Alteração
             
             <h:form>
                 <h:panelGrid columns="3">
