--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,8 @@ and open the template in the editor.
     <body>
         <div>TODO write content
          Pagina do index altera para teste.
+         Outro teste 
         </div>
+        
     </body>
 </html>
