--- a/web/acesso.xhtml
+++ b/web/acesso.xhtml
@@ -5,9 +5,10 @@
     <head>
         <title>Login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="utf-8"/>
         <link rel="shortcut icon" href="studio.ico" type="image/x-icon" />
 <link rel="stylesheet" href="resources/css/bootstrap-theme.min.css" type="text/css">
-<link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css">
     </head>
     <body>
