--- a/web/acesso.xhtml
+++ b/web/acesso.xhtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!--Apenas para teste -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
@@ -7,15 +7,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="utf-8"/>
         <link rel="shortcut icon" href="studio.ico" type="image/x-icon" />
-<link rel="stylesheet" href="resources/css/bootstrap-theme.min.css" type="text/css">
-<link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css">
+<link rel="stylesheet" href="resources/css/bootstrap-theme.min.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css"/>
     </head>
-    <body>
+    <body style="text-align: center">
        
-  <div class="input-group">
-  <span class="input-group-addon" id="basic-addon1">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+  <div class="center-block">
+  <span class="glyphicon glyphicon-user" id="basic-addon1" aria-hidden="true"></span>
+  <!--<span class="input-group-addon" id="basic-addon1">@</span>-->
+  <input type="text" class="form-control" placeholder="Usuário" aria-describedby="basic-addon1"/>
+  
+  
   </div>
         
     </body>
